feat: update docker-compose and Dockerfile for improved database connection and remove unused services; add Kubernetes deployment and service configurations

--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,5 +1,5 @@
 # escape=`
-FROM mcr.microsoft.com/dotnet/sdk:2.1-nanoserver-1809 AS builder
+FROM mcr.microsoft.com/dotnet/sdk:2.1 AS builder
 
 WORKDIR /album-viewer
 COPY AlbumViewerNetCore.sln .
@@ -9,10 +9,10 @@ COPY src/Westwind.Utilities/Westwind.Utilities.csproj src/Westwind.Utilities/Wes
 RUN dotnet restore src/AlbumViewerNetCore/AlbumViewerNetCore.csproj
 
 COPY src src
-RUN dotnet publish .\src\AlbumViewerNetCore\AlbumViewerNetCore.csproj
+RUN dotnet publish ./src/AlbumViewerNetCore/AlbumViewerNetCore.csproj
 
 # app image
-FROM mcr.microsoft.com/dotnet/aspnet:2.1-nanoserver-1809
+FROM mcr.microsoft.com/dotnet/aspnet:2.1
 
 WORKDIR /album-viewer
 COPY --from=builder /album-viewer/src/AlbumViewerNetCore/bin/Debug/netcoreapp2.0/publish/ .
