fix: update docker image variable to correct repository for consistency

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ pool:
   name: Default  # Tu agente autoservido local
 
 variables:
-  dockerImage: isaiascruz/album-viewer
+  dockerImage: isaiascruz/infosyp-prueba
   dockerTag: latest
   dockerfilePath: docker/app/Dockerfile
   buildContext: .
