--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,7 +59,29 @@ stages:
   condition: succeeded()
   displayName: "Docker Build & Push"
   jobs:
+    - job: BuildFrontend
+      displayName: "Build Angular Frontend"
+      steps:
+        - checkout: self
+
+        - task: NodeTool@0
+          inputs:
+            versionSpec: '14.x'
+          displayName: "Use Node.js 14 (compatible con node-sass 4.x)"
+
+        - script: |
+            cd src/AlbumViewerAngular
+            npm install
+            npm run build:prod
+          displayName: "Build Angular App"
+
+        - script: |
+            rmdir /s /q src\AlbumViewerNetCore\wwwroot
+            mkdir src\AlbumViewerNetCore\wwwroot
+            xcopy /s /e /q src\AlbumViewerAngular\dist\album-viewer src\AlbumViewerNetCore\wwwroot\
+          displayName: "Copy dist to wwwroot"
     - job: BuildPush
+      dependsOn: BuildFrontend
       steps:
         - task: Docker@2
           displayName: "Build Docker Image"
