--- a/environment/ingress.yaml
+++ b/environment/ingress.yaml
@@ -1,18 +1,11 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: v1
+kind: Service
 metadata:
-  name: album-viewer-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+  name: albumviewer-service
 spec:
-  rules:
-    - host: albumviewer.local
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: album-viewer-service
-                port:
-                  number: 80
+  selector:
+    app: albumviewer
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 5000  # o el puerto en que corre tu app .NET Core dentro del contenedor
