--- a/environment/mysql-deployment.yaml
+++ b/environment/mysql-deployment.yaml
@@ -14,9 +14,14 @@ spec:
     spec:
       containers:
         - name: album-db
-          image: dockersamples/tidb:nanoserver-1809
+          image: mysql:5.7
           ports:
-            - containerPort: 4000
+            - containerPort: 3306
+          env:
+            - name: MYSQL_ROOT_PASSWORD
+              value: root
+            - name: MYSQL_DATABASE
+              value: AlbumViewer
 ---
 apiVersion: v1
 kind: Service
@@ -28,4 +33,4 @@ spec:
   ports:
     - protocol: TCP
       port: 3306
-      targetPort: 4000
+      targetPort: 3306
