--- a/environment/app-deployment.yaml
+++ b/environment/app-deployment.yaml
@@ -21,7 +21,7 @@ spec:
             - name: Data__Provider
               value: "MySQL"
             - name: Data__ConnectionString
-              value: "Server=album-db;Port=3306;Database=AlbumViewer;User=root;SslMode=None"
+              value: "Server=album-db;Port=3306;Database=AlbumViewer;User=root;Password=root;SslMode=None"
 ---
 apiVersion: v1
 kind: Service
