--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,34 +80,34 @@ stages:
 # ========================
 # 3. CUSTOM SCRIPTS
 # ========================
-- stage: CustomScripts
-  dependsOn: Docker
-  displayName: "Run CMD Scripts"
-  jobs:
-    - job: HelloWorld
-      displayName: "Hola Mundo 10 veces"
-      strategy:
-        parallel: 1
-      steps:
-        - script: echo Hola Mundo desde job %AGENT_JOBNAME%
-          displayName: "Hola Mundo"
+# - stage: CustomScripts
+#   dependsOn: Docker
+#   displayName: "Run CMD Scripts"
+#   jobs:
+#     - job: HelloWorld
+#       displayName: "Hola Mundo 10 veces"
+#       strategy:
+#         parallel: 1
+#       steps:
+#         - script: echo Hola Mundo desde job %AGENT_JOBNAME%
+#           displayName: "Hola Mundo"
 
-    - job: CreateFiles
-      displayName: "Crear y mostrar archivos"
-      steps:
-        - script: |
-            mkdir output
-            for /L %%i in (1,1,1) do (
-              echo %DATE% %TIME% > output\fecha_%%i.txt
-            )
-            type output\*.txt
-          displayName: "Generar y mostrar archivos con fecha"
+#     - job: CreateFiles
+#       displayName: "Crear y mostrar archivos"
+#       steps:
+#         - script: |
+#             mkdir output
+#             for /L %%i in (1,1,1) do (
+#               echo %DATE% %TIME% > output\fecha_%%i.txt
+#             )
+#             type output\*.txt
+#           displayName: "Generar y mostrar archivos con fecha"
 
 # ========================
 # 4. K8S DEPLOY
 # ========================
 - stage: DeployK8s
-  dependsOn: CustomScripts
+  dependsOn: Docker
   displayName: "Deploy to Minikube"
   jobs:
     - job: ApplyK8s
@@ -123,7 +123,6 @@ stages:
           displayName: "Wait for DB readiness"
 
         - script: |
-            POD_NAME=$(kubectl get pods -l app=album-db -o jsonpath="{.items[0].metadata.name}")
-            kubectl cp AlbumViewerSqlServerData.sql $POD_NAME:/tmp/data.sql
-            kubectl exec -i $POD_NAME -- sh -c "mysql -u root --password=root AlbumViewer < /tmp/data.sql"
+            kubectl exec -i $(kubectl get pods -l app=album-db -o jsonpath="{.items[0].metadata.name}") -- \
+              mysql -u root --password=root AlbumViewer < AlbumViewerSqlServerData.sql
           displayName: "Load SQL inside pod"
